--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ environment:
 
 dependencies:
   auto_route: ^5.0.1
+  cached_network_image: ^3.2.1
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
   equatable: ^2.0.5
   firebase_auth: ^3.6.4
   firebase_core: ^1.21.0
