--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   google_fonts: ^3.0.1
   shared_preferences: ^2.0.15
+  youtube_player_flutter: ^8.1.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.1
