--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   auto_route: ^5.0.1
   cached_network_image: ^3.2.1
+  cloud_firestore: ^3.4.6
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   equatable: ^2.0.5
@@ -19,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  get_it: ^7.2.0
   google_fonts: ^3.0.1
   shared_preferences: ^2.0.15
   youtube_player_flutter: ^8.1.0
