--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   get_it: ^7.2.0
   google_fonts: ^3.0.1
   shared_preferences: ^2.0.15
+  webview_flutter: ^3.0.4
   youtube_player_flutter: ^8.1.0
 
 dev_dependencies:
