--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^2.0.15
   webview_flutter: ^3.0.4
   youtube_player_flutter: ^8.1.0
+  flutter_launcher_icons: ^0.10.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.1
