--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cloud_firestore: ^3.4.6
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  envied: ^0.2.3
   equatable: ^2.0.5
   firebase_auth: ^3.6.4
   firebase_core: ^1.21.0
@@ -21,6 +22,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_launcher_icons: ^0.10.0
   get_it: ^7.2.0
   google_fonts: ^3.0.1
   image_picker: ^0.8.5+3
@@ -28,11 +30,11 @@ dependencies:
   shared_preferences: ^2.0.15
   webview_flutter: ^3.0.4
   youtube_player_flutter: ^8.1.0
-  flutter_launcher_icons: ^0.10.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.1
   build_runner: ^2.2.0
+  envied_generator: ^0.2.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
